QUICK-FIX README.md modified